# BetterPhotoshop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  clang-autoformat.yml  notify-tg-on-pr-create.yml
Assets/Images/: image.pgm
Resources/: CMakeLists.txt
Resources/Images/: image.ppm  meadow.ppm  rgb-circles.ppm  taxi.ppm
Resources/Themes/Dark/: DarkTheme.qrc
Source/: CMakeLists.txt  main.cpp
Source/Core/: CMakeLists.txt  Log.cpp  Log.hpp
Source/Core/Image/: CMakeLists.txt  Image.cpp  Image.hpp  ImageFormat.hpp  PgmImage.cpp  PgmImage.hpp  PpmImage.cpp  PpmImage.hpp
Source/Core/Image/ColorModel/: CMakeLists.txt  CmyConverter.cpp  CmyConverter.hpp  ColorModelConverter.cpp  ColorModelConverter.hpp  HslConverter.cpp  HslConverter.hpp  HsvConverter.cpp  HsvConverter.hpp  RgbConverter.cpp  RgbConverter.hpp  YCbCr601Converter.cpp  YCbCr601Converter.hpp  YCbCr709Converter.cpp  YCbCr709Converter.hpp  YCbCrConverter.cpp  YCbCrConverter.hpp  YCoCgConverter.cpp  YCoCgConverter.hpp
Source/Core/Image/Dither/: AtkinsonDither.cpp  AtkinsonDither.hpp  CMakeLists.txt  Dither.cpp  Dither.hpp  FloydSteinbergDither.cpp  FloydSteinbergDither.hpp  OrderedDither.cpp  OrderedDither.hpp  RandomDither.cpp  RandomDither.hpp  TresholdDither.cpp  TresholdDither.hpp
Source/Core/Image/Editors/: CMakeLists.txt  Painter.cpp  Painter.hpp
Source/Core/Image/Filter/: AverageFilter.cpp  AverageFilter.hpp  BoxBlurFilter.cpp  BoxBlurFilter.hpp  CMakeLists.txt  ContrastAdaptiveSharpeningFilter.cpp  ContrastAdaptiveSharpeningFilter.hpp  Filter.cpp  Filter.hpp  GaussianFilter.cpp  GaussianFilter.hpp  MedianFilter.cpp  MedianFilter.hpp  OtsuFilter.cpp  OtsuFilter.hpp  SimpleTresholdFilter.cpp  SimpleTresholdFilter.hpp  SobelFilter.cpp  SobelFilter.hpp
Source/Core/Image/Gamma/: PowGammaCorrection.hpp  SrgbGammaCorrection.hpp
Source/Core/Image/Histogram/: CMakeLists.txt  Histogram.cpp  Histogram.hpp
Source/Core/Image/Reader/: CMakeLists.txt  FormatReaderResolver.cpp  FormatReaderResolver.hpp  ImageReader.cpp  ImageReader.hpp  PgmReader.cpp  PgmReader.hpp  PngReader.cpp  PngReader.h  PngReader.hpp  PpmReader.cpp  PpmReader.hpp
Source/Core/Image/Resize/: BcSpline.cpp  BcSpline.hpp  BilinearResizer.cpp  BilinearResizer.hpp  CMakeLists.txt  Lanczos3Resizer.cpp  Lanczos3Resizer.hpp  NearestPointResizer.cpp  NearestPointResizer.hpp  Resizer.cpp  Resizer.hpp
Source/Core/Image/Writer/: CMakeLists.txt  ImageWriter.cpp  ImageWriter.hpp  PgmWriter.cpp  PgmWriter.hpp  PngWriter.cpp  PngWriter.h  PngWriter.hpp  PpmWriter.cpp  PpmWriter.hpp
Source/Core/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
Source/Window/: Application.cpp  Application.hpp  CMakeLists.txt  ImageView.cpp  ImageView.hpp  ImageViewWithInfo.cpp  ImageViewWithInfo.hpp  LineDialog.cpp  LineDialog.hpp  MainWindow.cpp  MainWindow.hpp
Source/Window/Dialogs/: BcResizerDialog.cpp  BcResizerDialog.hpp  CMakeLists.txt  LineDialog.cpp  LineDialog.hpp  NewImageDialog.cpp  NewImageDialog.hpp  ResizeScaleDialog.cpp  ResizeScaleDialog.hpp
Source/Window/Widgets/: CMakeLists.txt  HistogramWidget.cpp  HistogramWidget.h
